Revert colors to old versions until all repo migrations are done.

--- a/src/less/colors.less
+++ b/src/less/colors.less
@@ -6,56 +6,56 @@
  */
 
 // Primary colors:
-@primary_blue: #2e00d9;
-@primary_blue_shade_1: #0500b0;
-@primary_blue_shade_2: #000087;
-@primary_blue_tint_1: #3e14fa;
-@primary_blue_tint_2: #473dff;
+@primary_blue: #4274f6;
+@primary_blue_shade_1: #3863d1;
+@primary_blue_shade_2: #2e51ac;
+@primary_blue_tint_1: #5e89f7;
+@primary_blue_tint_2: #7b9ef9;
 
 // Neutral colors:
-@neutral_black: #15131c;
-@neutral_dark_gray: #474c5e;
-@neutral_gray: #71738a;
-@neutral_silver: #d6d7de;
-@neutral_off_white: #fbfafc;
-@neutral_white: #ffffff;
+@neutral_black: #191926;
+@neutral_dark_gray: #566279;
+@neutral_gray: #b5bcca;
+@neutral_silver: #e3e6eb;
+@neutral_off_white: #fafafc;
+@neutral_white: #fff;
 
 // Alert colors:
-@alert_green: #009e78;
-@alert_green_shade_1: #00754f;
-@alert_green_shade_2: #004c26;
-@alert_green_tint_1: #14b28c;
-@alert_green_tint_2: #3ddbb5;
-@alert_orange: #ed8a00;
-@alert_orange_shade_1: #d97600;
-@alert_orange_shade_2: #b04d00;
-@alert_orange_tint_1: #ff9e14;
-@alert_orange_tint_2: #ffc73d;
-@alert_red: #de004b;
-@alert_red_shade_1: #ca0037;
-@alert_red_shade_2: #a1000e;
-@alert_red_tint_1: #f51152;
-@alert_red_tint_2: #ff4268;
+@alert_green: #01d59a;
+@alert_green_shade_1: #01b583;
+@alert_green_shade_2: #01956c;
+@alert_green_tint_1: #27dba9;
+@alert_green_tint_2: #4de2b8;
+@alert_orange: #fca53a;
+@alert_orange_shade_1: #d68c31;
+@alert_orange_shade_2: #b07329;
+@alert_orange_tint_1: #fcb358;
+@alert_orange_tint_2: #fdc075;
+@alert_red: #eb3b49;
+@alert_red_shade_1: #c8323e;
+@alert_red_shade_2: #a52933;
+@alert_red_tint_1: #ee5864;
+@alert_red_tint_2: #f17680;
 
 // Accent colors:
-@accent_teal: #00c7c7;
-@accent_teal_shade_1: #00b3b3;
-@accent_teal_shade_2: #008a8a;
-@accent_teal_tint_1: #14dbdb;
-@accent_teal_tint_2: #29f0f0;
-@accent_pink: #f70099;
-@accent_pink_shade_1: #e30085;
-@accent_pink_shade_2: #ba005c;
-@accent_pink_tint_1: #ff29ae;
-@accent_pink_tint_2: #ff52ce;
-@accent_purple: #8000ff;
-@accent_purple_shade_1: #6c00eb;
-@accent_purple_shade_2: #4e00c2;
-@accent_purple_tint_1: #9414ff;
-@accent_purple_tint_2: #bd3dff;
+@accent_teal: #33f7f1;
+@accent_teal_shade_1: #2bd2cd;
+@accent_teal_shade_2: #24ada9;
+@accent_teal_tint_1: #52f8f3;
+@accent_teal_tint_2: #70f9f5;
+@accent_pink: #e838bf;
+@accent_pink_shade_1: #c530a2;
+@accent_pink_shade_2: #a22786;
+@accent_pink_tint_1: #eb56c9;
+@accent_pink_tint_2: #ef74d2;
+@accent_purple: #7e1dff;
+@accent_purple_shade_1: #6b19d9;
+@accent_purple_shade_2: #5814b3;
+@accent_purple_tint_1: #913fff;
+@accent_purple_tint_2: #a561ff;
 
 // DEPRECATED COLORS:
-@accent_aqua: #00c7c7;
+@accent_aqua: #33f7f1;
 
 // DEPRECATED: Use pre-defined tints and shades above instead.
 @shadeStepAmount: 15%;
