--- a/src/less/colors.less
+++ b/src/less/colors.less
@@ -6,56 +6,56 @@
  */
 
 // Primary colors:
-@primary_blue: #4274f6;
-@primary_blue_shade_1: #3863d1;
-@primary_blue_shade_2: #2e51ac;
-@primary_blue_tint_1: #5e89f7;
-@primary_blue_tint_2: #7b9ef9;
+@primary_blue: #436CF2;
+@primary_blue_shade_1: #3158D7;
+@primary_blue_shade_2: #2146BD;
+@primary_blue_tint_1: #6486F8;
+@primary_blue_tint_2: #809DFF;
 
 // Neutral colors:
-@neutral_black: #191926;
-@neutral_dark_gray: #566279;
-@neutral_gray: #b5bcca;
+@neutral_black: #15131C;
+@neutral_dark_gray: #474C5E;
+@neutral_gray: #A8AEBA;
 @neutral_silver: #e3e6eb;
-@neutral_off_white: #fafafc;
+@neutral_off_white: #FBFAFC;
 @neutral_white: #fff;
 
 // Alert colors:
-@alert_green: #01d59a;
-@alert_green_shade_1: #01b583;
-@alert_green_shade_2: #01956c;
-@alert_green_tint_1: #27dba9;
-@alert_green_tint_2: #4de2b8;
-@alert_orange: #fca53a;
-@alert_orange_shade_1: #d68c31;
-@alert_orange_shade_2: #b07329;
-@alert_orange_tint_1: #fcb358;
-@alert_orange_tint_2: #fdc075;
-@alert_red: #eb3b49;
-@alert_red_shade_1: #c8323e;
-@alert_red_shade_2: #a52933;
-@alert_red_tint_1: #ee5864;
-@alert_red_tint_2: #f17680;
+@alert_green: #1DA978;
+@alert_green_shade_1: #139668;
+@alert_green_shade_2: #018657;
+@alert_green_tint_1: #2dBE8B;
+@alert_green_tint_2: #49D2A2;
+@alert_orange: #F59520;
+@alert_orange_shade_1: #F78214;
+@alert_orange_shade_2: #EE7503;
+@alert_orange_tint_1: #FAAA35;
+@alert_orange_tint_2: #FBC553;
+@alert_red: #E02B3A;
+@alert_red_shade_1: #C6212E;
+@alert_red_shade_2: #AE121F;
+@alert_red_tint_1: #ED4B59;
+@alert_red_tint_2: #F56A75;
 
 // Accent colors:
-@accent_teal: #33f7f1;
-@accent_teal_shade_1: #2bd2cd;
-@accent_teal_shade_2: #24ada9;
-@accent_teal_tint_1: #52f8f3;
-@accent_teal_tint_2: #70f9f5;
-@accent_pink: #e838bf;
-@accent_pink_shade_1: #c530a2;
-@accent_pink_shade_2: #a22786;
-@accent_pink_tint_1: #eb56c9;
-@accent_pink_tint_2: #ef74d2;
+@accent_teal: #29C6C1;
+@accent_teal_shade_1: #1CB0AB;
+@accent_teal_shade_2: #119792;
+@accent_teal_tint_1: #44D7D2;
+@accent_teal_tint_2: #7FE5E2;
+@accent_pink: #F03797;
+@accent_pink_shade_1: #D3257F;
+@accent_pink_shade_2: #B31969;
+@accent_pink_tint_1: #FB57AC;
+@accent_pink_tint_2: #FF75BD;
 @accent_purple: #7e1dff;
-@accent_purple_shade_1: #6b19d9;
-@accent_purple_shade_2: #5814b3;
-@accent_purple_tint_1: #913fff;
-@accent_purple_tint_2: #a561ff;
+@accent_purple_shade_1: #6609E0;
+@accent_purple_shade_2: #5201BF;
+@accent_purple_tint_1: #9244FA;
+@accent_purple_tint_2: #A460FF;
 
 // DEPRECATED COLORS:
-@accent_aqua: #33f7f1;
+@accent_aqua: #29C6C1;
 
 // DEPRECATED: Use pre-defined tints and shades above instead.
 @shadeStepAmount: 15%;
