make the TextArea component space better

--- a/src/TextArea/TextArea.less
+++ b/src/TextArea/TextArea.less
@@ -9,6 +9,9 @@
   background: @neutral_white;
   box-sizing: border-box;
   width: 100%;
+  min-height: 3.5rem;
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
 }
 
 .TextArea--infoRow {
@@ -45,6 +48,7 @@
   .text--medium;
   display: block;
   width: 100%;
+  min-height: 2.5rem;
   border: none;
   .margin--top--l;
 
@@ -66,7 +70,6 @@
     .text--small;
     .text--caps;
     color: @neutral_dark_gray;
-    .margin--top--m;
   }
 }
 
