use component relative sizing

--- a/src/TextArea/TextArea.less
+++ b/src/TextArea/TextArea.less
@@ -2,6 +2,7 @@
 
 .TextArea {
   .padding--left--s;
+  .padding--y--3xs;
   .text--regular;
   .border--s(@neutral_silver);
   position: relative;
@@ -9,9 +10,7 @@
   background: @neutral_white;
   box-sizing: border-box;
   width: 100%;
-  min-height: 3.5rem;
-  padding-top: 0.125rem;
-  padding-bottom: 0.125rem;
+  min-height: @size_4xl;
 }
 
 .TextArea--infoRow {
@@ -48,7 +47,7 @@
   .text--medium;
   display: block;
   width: 100%;
-  min-height: 2.5rem;
+  min-height: @size_2xl;
   border: none;
   .margin--top--l;
 
