--- a/src/FileInput/FileInput.less
+++ b/src/FileInput/FileInput.less
@@ -11,7 +11,6 @@
   cursor: pointer;
   height: @size_4xl;
   position: relative;
-  width: 100%;
 }
 
 .FileInput--Label {
@@ -25,6 +24,10 @@
 
 .FileInput--Text, .FileInput--Icon {
   .alignSelf(center);
+}
+
+.FileInput--Icon {
+  margin: auto;
 }
 
 .FileInput--Text--selected {
