Beginnings of adding `bodyScroll` attr to table

--- a/src/Table/Table.less
+++ b/src/Table/Table.less
@@ -28,3 +28,22 @@
   .tint(background-color, @neutral_silver, 5);
   cursor: pointer;
 }
+
+.Table--body_scroll tbody {
+  box-sizing: border-box;
+  display: block;
+  max-height: 80vh;
+  overflow-y: scroll;
+  width: 100%;
+}
+
+.Table--body_scroll thead {
+  box-sizing: border-box;
+  display: block;
+  width: 100%;
+}
+
+.Table--body_scroll tr {
+  box-sizing: border-box;
+  display: block;
+}
