Address PR comments

--- a/src/CopyContainer/CopyContainer.less
+++ b/src/CopyContainer/CopyContainer.less
@@ -1,7 +1,7 @@
 @import (reference) "../less/utilities";
 
 .Button.CopyContainer--button {
-  font-size: @type_small;
-  font-weight: normal;
-  margin-left: @size_s;
+  .text--small;
+  .text--regular;
+  .margin--left--s;
 }
