--- a/docs/components/EditableInfoPanelView.less
+++ b/docs/components/EditableInfoPanelView.less
@@ -10,6 +10,11 @@
   .padding--top--l;
 }
 
+
+.EditableInfoPanelView--titleText {
+  .margin--left--s;
+}
+
 .EditableInfoPanelView--config {
   .flexbox;
   .items--center;
