--- a/src/less/border_radius.less
+++ b/src/less/border_radius.less
@@ -22,6 +22,13 @@
  * Border radius classes.
  */
 
+.circle(@width) {
+  border-radius: 50%;
+  height: @width;
+  width: @width;
+}
+
+
 /** @borderRadius0 */
 .borderRadius--0 { border-radius: @borderRadius0; }
 
