run make generate

--- a/src/less/colors.less
+++ b/src/less/colors.less
@@ -17,7 +17,7 @@
 @neutral_dark_gray: #474C5E;
 @neutral_gray: #A8AEBA;
 @neutral_silver: #e3e6eb;
-@neutral_off_white: #FBFAFC;
+@neutral_off_white: #FAFBFC;
 @neutral_white: #fff;
 
 // Alert colors:
