Add animation to progress bar

--- a/src/ProgressBar/Progress.less
+++ b/src/ProgressBar/Progress.less
@@ -5,6 +5,8 @@
   height: 100%;
   width: 100%;
   position: absolute;
+  transition: width @timingSlowly ease-out @timingPromptly;
+  -webkit-transition: width @timingSlowly ease-out @timingPromptly;
 }
 
 .ProgressBar--Progress--none {
