include () in less mixins

--- a/src/AlertBox/AlertBox.less
+++ b/src/AlertBox/AlertBox.less
@@ -1,19 +1,19 @@
 @import (reference) "../less/index";
 
 .AlertBox--container {
-  .margin--y--m;
-  .padding--s;
+  .margin--y--m();
+  .padding--s();
   .border--s(transparent);
 }
 
 .AlertBox--title {
-  .text--semi-bold;
-  .text--large;
+  .text--semi-bold();
+  .text--large();
   .margin--bottom--s();
 }
 
 .AlertBox--header {
-  .padding--bottom--xs;
+  .padding--bottom--xs();
 }
 
 .AlertBox--Icon--container {
