Prevent Checkbox and Radio from shrinking in their flexbox containers

--- a/src/Checkbox/Checkbox.less
+++ b/src/Checkbox/Checkbox.less
@@ -18,6 +18,7 @@
 }
 
 .Checkbox--outer {
+  .flexShrink(0);
   background-color: @neutral_white;
   border-radius: @checkboxBorderRadius;
   border: @checkboxBorderWidth solid @primary_blue_tint_2;
