--- a/src/RadioGroup/Radio.less
+++ b/src/RadioGroup/Radio.less
@@ -17,6 +17,7 @@
 
 .Radio--outer {
   .circle(auto);
+  .flexShrink(0);
   background-color: @neutral_white;
   border: @radioOuterBorderWidth solid @primary_blue_tint_2;
   transition: @radioTransition;
