Add explanatory comment

--- a/src/ToastStack/ToastStack.less
+++ b/src/ToastStack/ToastStack.less
@@ -10,6 +10,8 @@
 .ToastStack--notificationWrapper {
   .margin--bottom--xs;
   .margin--x--xs;
+  // We need to set an explicit initial value for the leave animation to work properly. No
+  // notifications should actually hit this limit.
   max-height: 10rem;
 }
 
