--- a/src/Stepper/Step.less
+++ b/src/Stepper/Step.less
@@ -107,7 +107,7 @@
 .Stepper--Exclamation {
   width: .75em;
   height: 1.2em;
-  transform: translate(4px,-2px);
+  transform: translate(@size_2xs,-@size_3xs);
 }
 
 
