--- a/src/Stepper/Step.less
+++ b/src/Stepper/Step.less
@@ -2,7 +2,6 @@
 @import (reference) "../less/index";
 
 @stepIconWidth: 1.75rem; // 28px
-@iconBorderWidth: @size_4xs; // 1px
 @iconFocusShadowThickness: @size_2xs; // 4px
 @titleFontSize: 1.25rem; // 20px
 @alertSize: 0.375rem; // 6px
@@ -10,8 +9,9 @@
 .Step {
   .flexbox();
   .alignItems(flex-start);
-  width: 100%;
   .padding--y--2xs;
+  .text--medium;
+  .text--regular;
 }
 
 .Step--button {
@@ -22,35 +22,28 @@
 }
 
 .Step--title {
-  overflow: hidden;
   color: @neutral_gray;
   font-size: @titleFontSize;
   .text--semi-bold;
-  .margin--top--2xs;
-  -ms-flex: 0 1 auto;
-  transition: color @timingQuickly ease-out;
+  .margin--top--3xs;
+  .flexShrink(0);
+  transition: all @timingQuickly ease-out;
 }
 
 .Step--description {
   color: @neutral_gray;
-  .text--medium;
-  .text--regular;
-  transition: color @timingQuickly ease-out;
+  transition: all @timingQuickly ease-out;
 }
 
 .Step--message--optional {
-  overflow: hidden;
   color: @neutral_gray;
-  .text--medium;
   .text--italic;
   .margin--bottom--xs;
-  transition: color @timingQuickly ease-out;
+  transition: all @timingQuickly ease-out;
 }
 
 .Step--message--warning {
-  overflow: hidden;
   color: @alert_red;
-  .text--medium;
   .text--semi-bold;
   .margin--bottom--xs;
 }
@@ -63,19 +56,17 @@
   .justifyContent(center);
   .circle(@stepIconWidth);
   background-color: @neutral_white;
-  border: @iconBorderWidth solid @neutral_gray;
-  .text--medium;
-  .text--regular;
+  .border--s(@neutral_gray);
   .margin--right--s;
   color: @neutral_gray;
   box-shadow: 0 0 0 @iconFocusShadowThickness transparent;
-  transition: background-color @timingQuickly ease-out, border-color @timingQuickly ease-out;
+  transition: all @timingQuickly ease-out;
 }
 
 .Step--success {
   .Step--icon {
     background-color: @neutral_dark_gray;
-    border: @iconBorderWidth solid @neutral_dark_gray;
+    .border--s(@neutral_dark_gray);
     color: transparent;
   }
 }
@@ -83,7 +74,7 @@
 .Step--warning {
   .Step--icon {
     background-color: @alert_red;
-    border: @iconBorderWidth solid @alert_red;
+    .border--s(@alert_red);
     color: transparent;
   }
 }
@@ -91,7 +82,7 @@
 .Step--current {
   .Step--icon {
     background-color: @primary_blue;
-    border: @iconBorderWidth solid @primary_blue;
+    .border--s(@primary_blue);
     color: @neutral_white;
   }
 
@@ -108,7 +99,7 @@
 
 .Step:focus, .Step:hover.Step--seekable {
   .Step--icon {
-    border: @iconBorderWidth solid @neutral_black;
+    .border--s(@neutral_black);
     color: @neutral_dark_gray;
   }
 
@@ -117,20 +108,26 @@
   }
 }
 
-.Step:disabled {
-  cursor: default;
+.Step:not(.Step--current):not(.Step--seekable) {
+  cursor: not-allowed;
 }
 
 .Step:focus.Step--warning {
   .Step--icon {
     background-color: @alert_red_shade_2;
-    border: @iconBorderWidth solid @alert_red_shade_2;
+    .border--s(@alert_red_shade_2);
+  }
+}
+
+.Step.Step--current.Step--warning {
+  .Step--icon {
+    background-color: @primary_blue;
   }
 }
 
 .Step:focus.Step--current {
   .Step--icon {
-    border: @iconBorderWidth solid @primary_blue;
+    .border--s(@primary_blue);
     color: @neutral_white;
   }
 }
@@ -138,21 +135,21 @@
 .Step:hover.Step--seekable.Step--success {
   .Step--icon {
     background-color: @neutral_black;
-    border: @iconBorderWidth solid @neutral_black;
+    .border--s(@neutral_black);
   }
 }
 
 .Step:hover.Step--seekable.Step--warning {
   .Step--icon {
     background-color: @alert_red_shade_2;
-    border: @iconBorderWidth solid @alert_red_shade_2;
+    .border--s(@alert_red_shade_2);
   }
 }
 
 .Step:hover.Step--seekable.Step--current {
   .Step--icon {
     background-color: @primary_blue_shade_2;
-    border: @iconBorderWidth solid @primary_blue_shade_2;
+    .border--s(@primary_blue_shade_2);
     color: @neutral_white;
   }
 }
@@ -164,11 +161,11 @@
 }
 
 .Stepper--CheckMark {
-  width: .75em;
+  width: @size_s;
 }
 
 .Stepper--Exclamation {
-  width: .75em;
+  width: @size_s;
   height: 1.2em;
   transform: translate(@size_2xs,-@size_3xs);
 }
