--- a/src/Stepper/Stepper.less
+++ b/src/Stepper/Stepper.less
@@ -1,9 +1,19 @@
 @import "../less/fonts.less";
 @import (reference) "../less/index";
 
+.Stepper {
+  .flexbox();
+}
+
+.Stepper--sidebar {
+  .flex(0, 1, 18rem);
+  max-width: 18rem;
+  .padding--l;
+}
+
 .Stepper--stepsDisplay {
   .list-reset;
-  .padding--l;
+  .padding--none;
 
   li {
     &:not(:last-child) {
