--- a/docs/components/StepperView.less
+++ b/docs/components/StepperView.less
@@ -57,3 +57,12 @@ label.StepperView--config {
     .margin--top--m;
   }
 }
+
+.StepperView--stickyContainer {
+  .flexbox();
+}
+
+.StepperView--stickyContent {
+  .flex(0, 1, 18rem);
+  max-width: 18rem;
+}
