Add shared variables/utils for form element sizing

--- a/src/less/utilities.less
+++ b/src/less/utilities.less
@@ -9,6 +9,7 @@
 @import "./display";
 @import "./flex";
 @import "./fonts";
+@import "./forms";
 @import "./grid";
 @import "./layout";
 @import "./resets";
