Update ALL THE DOCS

--- a/components/CopyableInputView.less
+++ b/components/CopyableInputView.less
@@ -1,11 +1,5 @@
 @import (reference) "~less/index";
 
-
-.CopyableInputView--inputContainer {
-  max-width: 25rem;
-  min-width: 15rem;
-}
-
 .CopyableInputView--config {
   .text--small;
   cursor: pointer;
@@ -13,4 +7,9 @@
   margin: @size_xs;
   margin-left: 0;
   text-transform: uppercase;
+}
+
+.CopyableInputView--configOptions {
+  .margin--left--2xs();
+  display: inline-block;
 }
