--- a/components/DateInputView.less
+++ b/components/DateInputView.less
@@ -1,11 +1,5 @@
 @import (reference) "~less/index";
 
-
-.DateInputView--inputContainer {
-  max-width: 25rem;
-  min-width: 15rem;
-}
-
 .DateInputView--config {
   .text--small;
   cursor: pointer;
@@ -13,4 +7,9 @@
   margin: @size_xs;
   margin-left: 0;
   text-transform: uppercase;
+}
+
+.DateInputView--configOptions {
+  .margin--left--2xs();
+  display: inline-block;
 }
