--- a/docs/components/FileInputView.less
+++ b/docs/components/FileInputView.less
@@ -4,3 +4,17 @@
   height: @size_3xl;
   width: @size_3xl;
 }
+
+.FileInputView--config {
+  .margin--xs();
+  .margin--left--none();
+  .text--caps();
+  .text--small();
+  cursor: pointer;
+  display: inline-block;
+}
+
+.FileInputView--configOptions {
+  .margin--left--2xs();
+  display: inline-block;
+}
