--- a/src/WizardLayout/WizardLayout.less
+++ b/src/WizardLayout/WizardLayout.less
@@ -7,7 +7,6 @@
 }
 
 .WizardLayout--header {
-  position: sticky;
   background-color: @neutral_white;
   .margin--bottom--none();
   .padding--l();
@@ -20,10 +19,6 @@
   height: 4rem;
   .self--center();
   .margin--right--m();
-
-  img {
-    width: unset;
-  }
 }
 
 .WizardLayout--headerTitle {
@@ -59,12 +54,12 @@
   .flexShrink(0);
 }
 
-.WizardLayout--contentContainer {
+.WizardLayout--sectionContainer {
   .padding--m();
   overflow-y: scroll;
 }
 
-.WizardLayout--contentElem {
+.WizardLayout--section {
   .padding--l();
   background-color: @neutral_white;
   .borderRadius--l();
@@ -74,7 +69,7 @@
   max-width: 64rem;
 }
 
-.WizardLayout--contentTitle {
+.WizardLayout--sectionTitle {
   .text--large();
   .text--semi-bold();
   .margin--bottom--none();
@@ -82,7 +77,7 @@
   color: @neutral_dark_gray;
 }
 
-.WizardLayout--contentSubtitle {
+.WizardLayout--sectionSubtitle {
   .text--medium();
   max-width: unset;
   width: 100%;
@@ -95,11 +90,10 @@
   background-color: @neutral_white;
   .padding--l();
   box-shadow: @size_3xs @size_3xs @size_m @size_none rgba(168,174,186,0.3);
-  position: sticky;
   .flexShrink(0);
   .zIndex--1();
 }
 
-.WizardLayout--previousButton {
-  .margin--right--l() !important;
+.Button.WizardLayout--previousButton {
+  .margin--right--l();
 }
