divider without subtitle

--- a/src/WizardLayout/WizardLayout.less
+++ b/src/WizardLayout/WizardLayout.less
@@ -81,7 +81,12 @@
   .text--medium();
   max-width: unset;
   width: 100%;
-  .padding--bottom--xs();
+  .padding--bottom--none();
+  .margin--bottom--none();
+}
+
+.WizardLayout--sectionDivider {
+  .padding--top--xs();
   .border--bottom--s(@neutral_gray);
   .margin--bottom--l();
 }
