--- a/src/TopBar/TopBarMenu.less
+++ b/src/TopBar/TopBarMenu.less
@@ -1,5 +1,8 @@
 @import (reference) "../less/index";
 
-.TopBarMenu--trigger--label {
-  .margin--right--xs();
+.TopBarMenu--trigger {
+  width: 2.5rem;
+  height: 2.5rem;
+  .padding--none;
+  border-radius: 50%;
 }
