Final PR comments

--- a/src/TopBar/index.less
+++ b/src/TopBar/index.less
@@ -29,13 +29,7 @@
   .margin--x--xs;
   .text--medium;
   .text--regular;
+  .text--truncate;
   color: @neutral_white;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
   font-style: italic;
-}
-
-.dewey--TopBar--title--wrap {
-  white-space: normal;
 }
