Some more final tweaks

--- a/src/TopBar/TopBarButton.less
+++ b/src/TopBar/TopBarButton.less
@@ -23,8 +23,7 @@
   background-image: linear-gradient(270deg, #44d7d2 0%, #7fe5e2 100%);
   /* stylelint-disable-next-line unit-whitelist */
   box-shadow: 0 1px 6px 2px rgba(33, 70, 189, 0.25);
-  /* stylelint-disable-next-line unit-whitelist */
-  border-radius: 1px;
+  border-radius: @size_3xs;
   /* stylelint-disable-next-line unit-whitelist */
   height: 3px;
   position: absolute;
@@ -32,6 +31,7 @@
   display: block;
   left: @size_s;
   right: @size_s;
+  bottom: @size_s;
 }
 
 .TopBarButton--rounded {
