--- a/src/Menu/MenuItem.less
+++ b/src/Menu/MenuItem.less
@@ -19,6 +19,7 @@ button.Menu--MenuItem--default {
   display: block;
   transition: all @timingPromptly ease-out;
   width: 100%;
+  text-decoration: none;
 
   &:focus,
   &:hover {
