--- a/src/less/box-shadow.less
+++ b/src/less/box-shadow.less
@@ -20,15 +20,18 @@
 // Convenience mixins
 
 .boxShadow--light {
-  box-shadow: @boxShadowDefaultXOffset @boxShadowYOffsetS @boxShadowBlurRadiusS @boxShadowDefaultSpread @boxShadowDefaultColor
+  box-shadow: @boxShadowDefaultXOffset @boxShadowYOffsetS @boxShadowBlurRadiusS
+    @boxShadowDefaultSpread @boxShadowDefaultColor;
 }
 
 .boxShadow--medium {
-  box-shadow: @boxShadowDefaultXOffset @boxShadowYOffsetM @boxShadowBlurRadiusM @boxShadowDefaultSpread @boxShadowDefaultColor
+  box-shadow: @boxShadowDefaultXOffset @boxShadowYOffsetM @boxShadowBlurRadiusM
+    @boxShadowDefaultSpread @boxShadowDefaultColor;
 }
 
 .boxShadow--heavy {
-  box-shadow: @boxShadowDefaultXOffset @boxShadowYOffsetL @boxShadowBlurRadiusL @boxShadowDefaultSpread @boxShadowDefaultColor
+  box-shadow: @boxShadowDefaultXOffset @boxShadowYOffsetL @boxShadowBlurRadiusL
+    @boxShadowDefaultSpread @boxShadowDefaultColor;
 }
 
 // DEPRECATED - remove once there are no usages of these
