Fix DateInput text

--- a/src/DateInput/DateInput.less
+++ b/src/DateInput/DateInput.less
@@ -44,6 +44,10 @@
     }
   }
 
+  .react-datepicker-wrapper {
+    width: 100%;
+  }
+
   .react-datepicker__input-container {
     width: 100%;
   }
