error format when empty required field blurred

--- a/src/less/box-shadow.less
+++ b/src/less/box-shadow.less
@@ -35,8 +35,7 @@
 }
 
 .boxShadow(@blurRadius, @color) {
-  box-shadow: @boxShadowDefaultXOffset @boxShadowYOffsetM @blurRadius
-    @boxShadowDefaultSpread @color;
+  box-shadow: @boxShadowDefaultXOffset @boxShadowYOffsetM @blurRadius @boxShadowDefaultSpread @color;
 }
 
 // DEPRECATED - remove once there are no usages of these
