--- a/src/FloatingButton/FloatingButton.less
+++ b/src/FloatingButton/FloatingButton.less
@@ -27,23 +27,16 @@
 }
 
 .FloatingButton--subElement {
-  // .border--s(@neutral_silver);
   .margin--2xs();
   transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
-  color: @alert_green;
-  // text-align: right;
 }
 
 .FloatingButton--inactive--bottom {
-  transform: translateY(40px);
+  transform: translateY(2.5rem);
   opacity: 0;
 }
 
 .FloatingButton--inactive--top {
-  transform: translateY(-40px);
+  transform: translateY(-2.5rem);
   opacity: 0;
-}
-
-.FloatingButton--unique {
-  color: white;
 }
