removed test and added className pass through

--- a/src/FloatingButton/FloatingButton.less
+++ b/src/FloatingButton/FloatingButton.less
@@ -31,6 +31,10 @@
   transition: opacity 0.2s ease-in-out, transform 0.2s ease-in-out;
 }
 
+.FloatingButton--button {
+  .boxShadow--heavy();
+}
+
 .FloatingButton--inactive--bottom {
   transform: translateY(2.5rem);
   opacity: 0;
