--- a/src/WizardLayout/WizardLayout.less
+++ b/src/WizardLayout/WizardLayout.less
@@ -6,6 +6,10 @@
   width: 100%;
 }
 
+.WizardLayout--fullscreen {
+  height: 1vh;
+}
+
 .WizardLayout--header {
   background-color: @neutral_white;
   .margin--bottom--none();
@@ -16,7 +20,7 @@
 }
 
 .WizardLayout--headerImg {
-  height: 4rem;
+  height: @size_5xl;
   .self--center();
   .margin--right--m();
 }
@@ -32,6 +36,13 @@
 
 .WizardLayout--body {
   overflow: auto;
+}
+
+.WizardLayout--body--fullscreen {
+  overflow: unset;
+  height: 1vh;
+  flex: 1;
+  margin-bottom: 5.5rem;
 }
 
 .WizardLayout--helpContainer {
@@ -101,4 +112,11 @@
 
 .Button.WizardLayout--previousButton {
   .margin--right--l();
+}
+
+.WizardLayout--footer--fullscreen {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
