--- a/src/less/flex.less
+++ b/src/less/flex.less
@@ -270,6 +270,10 @@
   .flexDirection(column);
 }
 
+.flex--direction--columnReverse {
+  .flexDirection(column-reverse);
+}
+
 .flex--direction--row {
   .flexDirection(row);
 }
